# covid_classification

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_tests.py
.github/workflows/: release.yml
notebooks/: 1-exploratory_data_analysis.ipynb  2-pre_processing.ipynb  3-model_training.ipynb
scripts/: bump_version.py
src/: __init__.py
src/scripts/: data_processing_pipeline.py  data_transform.py
src/util/: dataset.py  environment.py  image_processing.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: test_fixtures.py
tests/util/: test_dataset.py  test_environment.py  test_image_processing.py
